fix(content): add missing letter-spacing for .links-list__link
should have added this in the last commit.

--- a/-/-/links-list/__link/_index.scss
+++ b/-/-/links-list/__link/_index.scss
@@ -1,5 +1,6 @@
 .links-list__link {
   font-size: 1.25rem;
+  letter-spacing: 0.05em;
   font-family: Arial, sans-serif;
   color: #f2f0f5;
   text-decoration-line: underline;
